# Homework-5-python-DJANGO-REST-FRAMEWORK

./: .dockerignore  .env.docker.example  .env.example  .flake8  .gitignore  Dockerfile  README.md  celerybeat-schedule.db  docker-compose.yml  dump.rdb  entrypoint.sh  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
data/: courses.json  lessons.json  payments.json  users.json
data/fixtures/: courses.json  groups.json  lessons.json  payments.json
lms_system/: admin.py  apps.py  models.py  paginators.py  serializers.py  services.py  signals.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms_system/management/commands/: add_courses.py  add_lessons.py
lms_system/migrations/: 0001_initial.py  0002_rename_course_id_lesson_course.py  0003_alter_lesson_course.py  0004_course_owner_lesson_owner.py  0005_subscription.py  0006_course_created_at_course_updated_at_and_more.py
nginx/: Dockerfile  nginx.conf
users/: admin.py  managers.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/management/commands/: add_payments.py  add_users.py
users/migrations/: 0001_initial.py  0002_alter_customuser_managers.py  0003_payments.py  0004_alter_payments_paid_course_and_more.py  0005_alter_payments_options_alter_payments_payment_method.py  0006_payments_payment_url_payments_stripe_price_id_and_more.py  0007_alter_payments_payment_url_and_more.py  0008_payments_payment_status.py
